--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link href="//fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 <!-- //font -->
+	<!-- favicon -->
+	<link rel="shortcut icon" type="image/png" href="images/newNRLicon.png"/>
+	<!-- //favicon -->
+
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script type="text/javascript">
