--- a/groomsmen.html
+++ b/groomsmen.html
@@ -137,7 +137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/ryan.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Ryan is Reid's Brother and Nathan's good friend from high school.The three and a couple other friends refereed to themselves as 3-LH and shared loads of mischievous fun together. All guys still remain great friends today and frequently reminisce about their CRAZY days while playing the Mexican.</p>
+							<p>Ryan is Reid's Brother and Nathan's good friend from high school.The three and a couple other friends refereed to themselves as 2LH and shared loads of mischievous fun together. All guys still remain great friends today and frequently reminisce about their CRAZY days while playing the Mexican.</p>
 						</div>
 					</div>
 					<div class="w3_agileits_team-info">
@@ -164,7 +164,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3layouts_team_grid">
 						<img src="images/brody.png" alt=" " class="img-responsive" />
 						<div class="w3layouts_team_grid_pos">
-							<p>Brody Berson and Nate's high school role model who passed down his amazing bread growing abilities to Nate when he graduated (we are still waiting for those abilities to kick in). The two became close friends post college after Brody started dating one of Nathan's friends Stephany. Lauren, Nathan, Brody and Stephany love taking adventures together and know it's a life time of adventures ahead.</p>
+							<p>Brody Berson and Nate's high school role model who passed down his amazing beard growing abilities to Nate when he graduated (we are still waiting for those abilities to kick in). The two became close friends post college after Brody started dating one of Nathan's friends Stephany. Lauren, Nathan, Brody and Stephany love taking adventures together and know it's a life time of adventures ahead.</p>
 						</div>
 					</div>
 					<div class="w3_agileits_team-info">
