Adding Food Menu

--- a/menu.html
+++ b/menu.html
@@ -95,7 +95,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</ul>
 			</div>
 			<div class="w3layouts_breadcrumbs_right">
-				<h2>Groomsmen</h2>
+				<h2>Dinner Menu</h2>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
@@ -106,109 +106,62 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="team">
 		<div class="container">
 			<div class="wthree-heading">
-				<h3>The Boys...</h3>
+				<div class="about-top">
+					<div class="container">
+						<div class="about-top-grids">
+                            <div class="col-md-8 col-md-offset-2 w3_agileits_team_grid">
+                                <div class="w3layouts_team_grid">
+                                    <img src="images/farmSalad.png" alt="Salad" class="img-responsive" />
+                                    <div class="w3layouts_team_grid_pos">
+                                        <p>Baby iceberg lettuce wedge, carrot curls, radish coins, cucumbers, grape tomatoes, lemon vinaigrette</p>
+                                    </div>
+                                </div>
+                                <div class="center w3_agileits_team-info">
+                                    <h3>Wedge Salad</h3>
+                                </div>
+                            </div>
+                            <span>
+                            <div class="col-md-8 col-md-offset-2 w3_agileits_team_grid">
+                                <div class="w3layouts_team_grid">
+                                    <img src="images/porkLoin.png" alt="Pork" class="img-responsive" />
+                                    <div class="w3layouts_team_grid_pos">
+                                        <p>Tea rubbed Michigan duroc pork loin with mustard cream sauce</p>
+                                    </div>
+                                </div>
+                                <div class="center w3_agileits_team-info">
+                                    <h3>Pork Loin</h3>
+                                </div>
+                            </div>
+                            <span>
+                            <div class="col-md-8 col-md-offset-2 w3_agileits_team_grid">
+                                <div class="w3layouts_team_grid">
+                                    <img src="images/salmon.png" alt="Salmon" class="img-responsive" />
+                                    <div class="w3layouts_team_grid_pos">
+                                        <p>Peptia pesto Atlantic salmon with a tomato and caper relish</p>
+                                    </div>
+                                </div>
+                                <div class="center w3_agileits_team-info">
+                                    <h3>Atlantic Salmon</h3>
+                                </div>
+                            </div>
+                            <span>
+                            <div class="col-md-8 col-md-offset-2 w3_agileits_team_grid">
+                                <div class="w3layouts_team_grid">
+                                    <img src="images/cauliflower.png" alt="Cauliflower" class="img-responsive" />
+                                    <div class="w3layouts_team_grid_pos">
+                                        <p>Asian spiced cauliflower steak, red quinoa, seasonal tiny vegetables, spinach, kalbi sauce, sweet chili sauce, and scallions</p>
+                                    </div>
+                                </div>
+                                <div class="center w3_agileits_team-info">
+                                    <h3>Vegetarian</h3>
+                                </div>
+                            </div>
+                        </div>
+					</div>
+				</div>
 			</div>
-			<div class="w3ls_team_grids">
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/reid.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Reid is Nathan's best friend and brother he never had. The two may live in different states but never miss a beat when they're together. They've been through the good, the bad and the ugly and Nathan couldn't image celebrating this day without Reid by his side. The two are frequently heard mumbling 'WAZZZAH' over the phone.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Reid Klootwyk</h4>
-						<p>Master Klootwyk</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/branden.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Branden is Nathan's other best friend who was once his "frienemie" turned basically brothers in high-school. The two share the same sense of humor and are often spotted belly laughing together. Nathan and Lauren both love spending time with Branden and his sweet girlfriend Alex.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Branden Maue</h4>
-						<p>Mao Zedong</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/ryan.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Ryan is Reid's Brother and Nathan's good friend from high school.The three and a couple other friends refereed to themselves as 2LH and shared loads of mischievous fun together. All guys still remain great friends today and frequently reminisce about their CRAZY days while playing the Mexican.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Ryan Klootwyk</h4>
-						<p>Ryan</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/ben.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Ben and Nathan become instant friends in college for their shared love of nature, video games and good whiskey. The two have shared many wild nights (Nate's Mohawk days) and loads of laughs together and without a doubt will remain forever friends. Ben and Nate can be seen camping together smoking stogies.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Ben Ocharzak</h4>
-						<p>Benno</p>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="w3ls_team_grids">
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/brody.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Brody Berson and Nate's high school role model who passed down his amazing beard growing abilities to Nate when he graduated (we are still waiting for those abilities to kick in). The two became close friends post college after Brody started dating one of Nathan's friends Stephany. Lauren, Nathan, Brody and Stephany love taking adventures together and know it's a life time of adventures ahead.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Brody Berson</h4>
-						<p>Brody</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/dylan.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Dylan is Nathan's childhood friend. The two were inseparable together and still remain great friends today despite different zip codes. Nate is happy to have Dylan by his side on this special day.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Dylan Barry</h4>
-						<p>D Barry</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/jake.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Jake is Nathan's cousin and friend. The two have a mutual obsession with their grandmother's Swedish pancakes and the video game Red Dead Redemtion. Jake and Nate can be seen together playing hours of video games and drinking craft beer.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Jake Russell</h4>
-						<p>Jakester</p>
-					</div>
-				</div>
-				<div class="col-md-3 w3_agileits_team_grid">
-					<div class="w3layouts_team_grid">
-						<img src="images/kyle.png" alt=" " class="img-responsive" />
-						<div class="w3layouts_team_grid_pos">
-							<p>Kyle is Lauren's older brother and was relieved when Lauren met Nathan and finally did away with the poor slobs she was dating. Both Nathan and Kyle had an instant connection over their mutual interests and love of learning. Nathan and Kyle frequently nerd out and enjoy sipping a few cold ones watching ND football.</p>
-						</div>
-					</div>
-					<div class="w3_agileits_team-info">
-						<h4>Kyle Smith</h4>
-						<p>Smitty</p>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
+			<div>
+
 			</div>
 		</div>
 	</div>
