--- a/weddingParty.html
+++ b/weddingParty.html
@@ -213,6 +213,118 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!-- //team -->
+
+	<!-- team -->
+	<div class="team">
+		<div class="container">
+			<div class="wthree-heading">
+				<h3>The Ladies...</h3>
+			</div>
+			<div class="w3ls_team_grids">
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/morgan.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Morgan Smith is Lauren's sisters and the matchmaker in Nathan and Lauren's love story. Morgan and Lauren enjoy hanging-out on the golf course together, having heart-to-hearts, and getting puppy snuggles from Palmer, Morgan's dog. Morgan is always Lauren's first call when she's trying to get in touch with someone from their family because Morgan ALWAYS answers. Lauren and Morgan can be found together lounging on their parents boat sipping cocktails.</p>					</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Morgan Smith</h4>
+						<p>Mo</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/mere.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Meredith Smith is Lauren's sister and former college roommate at Ferris State University (Go Bulldogs!). When Lauren and Meredith are together they're typically quoting Bridesmaids, talking in southern accents and often using the catch phrase, "For what its worth". Meredith and Lauren can be found together shopping at Sparrow.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Meredith DeTorres</h4>
+						<p>Meren</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/emilyolsen.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Emily Olsen and Lauren have been best friends for over 22 years! Together they have gone through it all, terrible haircuts, heartbreaks, birthdays, crazy nights out and movie nights in. The two are nearly inseparable. Both women live in Grand Rapids and work for Priority Health! Lauren and Emily will be seen in 60 years, old, grey, happy and laughing together. </p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Emily Olsen</h4>
+						<p>Em</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/kylea.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Kylea is Lauren's cousin, sister, and friend. Kylea and Lauren were forced to like each other but became instant friends because of their shared love of fashion, work-outs and impressions. It's a rare to find Kylea and Lauren talking in their normal voices when they're together. Kylea and Lauren have been through a lot of embarrassing life lessons together, from trying to use self tanner and turning orange, to attempting to wax their legs and having the wax, what seemed like permanently adhere to their skin; they've been through the good, the bad and the ugly and wouldn't want life any other way. Lauren and Kylea can be found together doing "Sally squats".</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Kylea Carlston</h4>
+						<p>Kylea</p>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="w3ls_team_grids">
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/amy.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Amy is one of Lauren's oldest best friends. Amy and Lauren became friends in kindergarten and even lived together in college (Go Bulldogs)! Together Amy and Lauren have experienced, horrible makeovers (sparkle overload), mind-numbing study cram sessions (college finals) and a lot of fun kitchen dance parties (Oakwood... need I say more?). Amy is a lifetime friend that can be seen with Lauren sipping wine in lounge wear, playing Sims on their ipads.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Amy Studier</h4>
+						<p>Amy</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/allison.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Allison is Lauren's sister-in-law and co-loving friend of all things British, French and fabulous. Lauren and Allison instantly hit-it-off when Kyle brought her into the Smith family and the two can frequently be seen together drinking gin and tonics, eating macrons and planning trips. Lauren and Allison can be found together binge watching Outlander and planning trips.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Allison Smith</h4>
+						<p>Allison</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/emilykant.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Emily Kant is one of Lauren’s dear friends. The two met in middle school but became close in high school through choir and their mutual love of knitting, Kate Spade, Coco Chanel and all things pretty. Emily and Lauren were also childhood neighbors and roommates in Chicago! Emily has a wonderful husband Ben and a beautiful baby girl on the way. Lauren and Emily enjoy sipping tea and swapping recipes together.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Emily Kant</h4>
+						<p>Emily</p>
+					</div>
+				</div>
+				<div class="col-md-3 w3_agileits_team_grid">
+					<div class="w3layouts_team_grid">
+						<img src="images/sis.png" alt=" " class="img-responsive" />
+						<div class="w3layouts_team_grid_pos">
+							<p>Emily Lindenbaum is Nathan's older sister who is known for her amazing hair, kind heart, creativity and impressive athletic ability. Lauren and Emily connected over their love of art, boating and love of Nathan. Lauren could not be more excited to gain another sister and become a member of the Lindenbaum family.</p>
+						</div>
+					</div>
+					<div class="w3_agileits_team-info">
+						<h4>Emily Lindenbaum</h4>
+						<p>Sis</p>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+		</div>
+	</div>
+	<!-- //team -->
+
 	<!-- //about -->
 	<!-- footer -->
 	<div class="footer">
