--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<ul class="nav navbar-nav">
 									<li><a class="active" href="index.html">Home</a></li>
 									<li><a href="about.html">Our Story</a></li>
-                                    <li><a href="groomsmen.html">Groomsmen</a></li>
-                                    <li><a href="bridesmaids.html">Bridesmaids</a></li>
+                                    <li><a href="weddingParty.html">Wedding Party</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 								<div class="clearfix"> </div>
