--- a/about.html
+++ b/about.html
@@ -75,16 +75,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             </button>
                         </div>
                         <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a class="active" href="about.html">Our Story</a></li>
-                                <li><a href="groomsmen.html">Groomsmen</a></li>
-                                <li><a href="bridesmaids.html">Bridesmaids</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                            </ul>
-                            <div class="clearfix"> </div>
-                        </div>
+						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<ul class="nav navbar-nav">
+								<li><a href="index.html">Home</a></li>
+								<li><a class="active" href="about.html">Our Story</a></li>
+								<li><a href="weddingParty.html">Wedding Party</a></li>
+								<li><a href="menu.html">Food</a></li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
+							<div class="clearfix"> </div>
+						</div>
                     </nav>
                 </div>
             </div>
@@ -135,146 +135,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!-- //about-top -->
-	<!-- Timeline -->
-	<div class="Timeline">
-
-		<svg height="5" width="200">
-			<line x1="0" y1="0" x2="200" y2="0" style="stroke:#004165;stroke-width:5" />
-			Sorry, your browser does not support inline SVG.
-		</svg>
-
-		<div class="event1">
-
-			<div class="event1Bubble">
-				<div class="eventTime">
-					<div class="DayDigit">1</div>
-					<div class="Day">
-						Friday
-						<div class="MonthYear">July 2016</div>
-					</div>
-				</div>
-				<div class="eventTitle">Nate Asks Morgan</div>
-			</div>
-			<svg height="20" width="20">
-				<circle cx="10" cy="11" r="5" fill="#004165" />
-			</svg>
-			<div class="time">7 : 30 PM</div>
-
-		</div>
-
-		<svg height="5" width="50">
-			<line x1="0" y1="0" x2="50" y2="0" style="stroke:#004165;stroke-width:5" />
-			Sorry, your browser does not support inline SVG.
-		</svg>
-
-		<div class="event2">
-
-			<div class="event2Bubble">
-				<div class="eventTime">
-					<div class="DayDigit">8</div>
-					<div class="Day">
-						Friday
-						<div class="MonthYear">July 2016</div>
-					</div>
-				</div>
-				<div class="eventTitle">First Date</div>
-			</div>
-			<div class="event2Author">Nate</div>
-			<svg height="20" width="20">
-				<circle cx="10" cy="11" r="5" fill="#004165" />
-			</svg>
-			<div class="time2">6 : 30 PM</div>
-		</div>
-
-		<svg height="5" width="200">
-			<line x1="0" y1="0" x2="200" y2="0" style="stroke:#004165;stroke-width:5" />
-			Sorry, your browser does not support inline SVG.
-		</svg>
-
-		<div class="event1">
-
-			<div class="event1Bubble">
-				<div class="eventTime">
-					<div class="DayDigit">12</div>
-					<div class="Day">
-						Friday
-						<div class="MonthYear">June 2017</div>
-					</div>
-				</div>
-				<div class="eventTitle">Live Together</div>
-			</div>
-			<svg height="20" width="20">
-				<circle cx="10" cy="11" r="5" fill="#004165" />
-			</svg>
-			<div class="time1"> </div>
-		</div>
-
-		<svg height="5" width="150">
-			<line x1="0" y1="0" x2="150" y2="0" style="stroke:#004165;stroke-width:5" />
-			Sorry, your browser does not support inline SVG.
-		</svg>
-
-		<div class="event2">
-
-			<div class="event2Bubble">
-				<div class="eventTime">
-					<div class="DayDigit">19</div>
-					<div class="Day">
-						Wednesday
-						<div class="MonthYear">September 2018</div>
-					</div>
-				</div>
-				<div class="eventTitle">Engaged</div>
-			</div>
-			<div class="event2Author">Nate & Lauren</div>
-			<svg height="20" width="20">
-				<circle cx="10" cy="11" r="5" fill="#004165" />
-			</svg>
-		</div>
-
-		<svg height="5" width="100">
-			<line x1="0" y1="0" x2="100" y2="0" style="stroke:#004165;stroke-width:5" />
-			Sorry, your browser does not support inline SVG.
-		</svg>
-
-		<div class="now">
-			NOW
-		</div>
-
-
-		<svg height="5" width="100">
-			<line x1="0" y1="0" x2="100" y2="0" style="stroke:rgba(162, 164, 163, 0.37);stroke-width:5" />
-			Sorry, your browser does not support inline SVG.
-		</svg>
-		<div class="event3 futureGray ">
-			<div class="event1Bubble futureOpacity">
-				<div class="eventTime">
-					<div class="DayDigit">30</div>
-					<div class="Day">
-						Saturday
-						<div class="MonthYear">May 2020</div>
-					</div>
-				</div>
-				<div class="eventTitle">Wedding</div>
-			</div>
-			<svg height="20" width="20">
-				<circle cx="10" cy="11" r="5" fill="rgba(162, 164, 163, 0.37)" />
-			</svg>
-		</div>
-		<svg height="5" width="50">
-			<line x1="0" y1="0" x2="50" y2="0" style="stroke:rgba(162, 164, 163, 0.37);stroke-width:5" />
-		</svg>
-		<svg height="20" width="42">
-			<line x1="1" y1="0" x2="1" y2="20" style="stroke:rgba(162, 164, 163, 0.37);stroke-width:2" />
-			<circle cx="11" cy="10" r="3" fill="rgba(162, 164, 163, 0.37)" />
-			<circle cx="21" cy="10" r="3" fill="rgba(162, 164, 163, 0.37)" />
-			<circle cx="31" cy="10" r="3" fill="rgba(162, 164, 163, 0.37)" />
-			<line x1="41" y1="0" x2="41" y2="20" style="stroke:rgba(162, 164, 163, 0.37);stroke-width:2" />
-		</svg>
-
-	</div>
-	<!-- //Timeline -->
-
 	<!-- //about -->
 	<!-- footer -->
 	<div id="footer" class="footer">
