--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="header-left">
 					<div class="w3layouts-logo">
 						<h1>
-							<a href="index.html">Venue</a>
+							<a href="index.html">Contact</a>
 						</h1>
 					</div>
 				</div>
@@ -76,16 +76,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</button>
 						</div>
 						<!-- Collect the nav links, forms, and other content for toggling -->
-						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-							<ul class="nav navbar-nav">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="about.html">Our Story</a></li>
-								<li><a href="groomsmen.html">Groomsmen</a></li>
-								<li><a href="bridesmaids.html">Bridesmaids</a></li>
-								<li><a class="active" href="contact.html">Contact</a></li>
-							</ul>
-							<div class="clearfix"> </div>
-						</div>
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">Our Story</a></li>
+                                <li><a href="weddingParty.html">Wedding Party</a></li>
+                                <li><a href="menu.html">Food</a></li>
+                                <li><a class="active" href="contact.html">Contact</a></li>
+                            </ul>
+                            <div class="clearfix"> </div>
+                        </div>
 					</nav>
 				</div>
 			</div>
