--- a/index.html
+++ b/index.html
@@ -75,15 +75,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</button>
 								</div>
 							<!-- Collect the nav links, forms, and other content for toggling -->
-							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-								<ul class="nav navbar-nav">
-									<li><a class="active" href="index.html">Home</a></li>
-									<li><a href="about.html">Our Story</a></li>
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav">
+                                    <li><a class="active" href="index.html">Home</a></li>
+                                    <li><a href="about.html">Our Story</a></li>
                                     <li><a href="weddingParty.html">Wedding Party</a></li>
-									<li><a href="contact.html">Contact</a></li>
-								</ul>
-								<div class="clearfix"> </div>
-							</div>
+                                    <li><a href="menu.html">Food</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
+                                </ul>
+                                <div class="clearfix"> </div>
+                            </div>
 						</nav>
 				</div>
 				<!-- w3-banner -->
@@ -123,7 +124,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="agile_events_grid">
 					<img src="images/v32.jpg" alt=" " class="img-responsive" />
 					<div class="agile_events_grid_pos_sub agile_events_grid_pos1">
-						<h5><span>5:30pm</span> 5/30/2020</h5>
+						<h5><span>4:30pm</span> 5/30/2020</h5>
 						<h4>Reception</h4>
 						<p>Venue3Two | 3220 32nd St SE, Kentwood, MI 49512, USA</p>
 					</div>
