--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="header-left">
 					<div class="w3layouts-logo">
 						<h1>
-							<a href="index.html">Groomsmen</a>
+							<a href="index.html">Food Menu</a>
 						</h1>
 					</div>
 				</div>
@@ -73,13 +73,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <ul class="nav navbar-nav">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="about.html">Our Story</a></li>
-                                    <li><a class="active" href="groomsmen.html">Groomsmen</a></li>
-                                    <li><a href="bridesmaids.html">Bridesmaids</a></li>
+                                    <li><a href="weddingParty.html">Wedding Party</a></li>
+                                    <li><a class="active" href="menu.html">Food</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                                 <div class="clearfix"> </div>
                             </div>
-						</nav>		
+						</nav>
 				</div>
 			</div>
 		</div>
@@ -91,7 +91,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="w3layouts_breadcrumbs_left">
 				<ul>
 					<li><i class="fa fa-home" aria-hidden="true"></i><a href="index.html">Home</a><span>/</span></li>
-					<li><i class="fa fa-info-circle" aria-hidden="true"></i>Groomsmen</li>
+					<li><i class="fa fa-info-circle" aria-hidden="true"></i>Menu</li>
 				</ul>
 			</div>
 			<div class="w3layouts_breadcrumbs_right">
