--- a/weddingParty.html
+++ b/weddingParty.html
@@ -50,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="header-left">
 					<div class="w3layouts-logo">
 						<h1>
-							<a href="index.html">Groomsmen</a>
+							<a href="index.html">Wedding Party</a>
 						</h1>
 					</div>
 				</div>
@@ -69,16 +69,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</button>
 								</div>
 							<!-- Collect the nav links, forms, and other content for toggling -->
-                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                                <ul class="nav navbar-nav">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="about.html">Our Story</a></li>
-                                    <li><a class="active" href="groomsmen.html">Groomsmen</a></li>
-                                    <li><a href="bridesmaids.html">Bridesmaids</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                </ul>
-                                <div class="clearfix"> </div>
-                            </div>
+							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+								<ul class="nav navbar-nav">
+									<li><a href="index.html">Home</a></li>
+									<li><a href="about.html">Our Story</a></li>
+									<li><a class="active" href="weddingParty.html">Wedding Party</a></li>
+									<li><a href="menu.html">Food</a></li>
+									<li><a href="contact.html">Contact</a></li>
+								</ul>
+								<div class="clearfix"> </div>
+							</div>
 						</nav>		
 				</div>
 			</div>
@@ -91,11 +91,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="w3layouts_breadcrumbs_left">
 				<ul>
 					<li><i class="fa fa-home" aria-hidden="true"></i><a href="index.html">Home</a><span>/</span></li>
-					<li><i class="fa fa-info-circle" aria-hidden="true"></i>Groomsmen</li>
+					<li><i class="fa fa-info-circle" aria-hidden="true"></i>Wedding Party</li>
 				</ul>
 			</div>
 			<div class="w3layouts_breadcrumbs_right">
-				<h2>Groomsmen</h2>
+				<h2>Wedding Party</h2>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
