Finalizing, adding email and hotel info

--- a/contact.html
+++ b/contact.html
@@ -117,18 +117,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="mail-grids">
 				<div class="col-md-6 mail-grid-left">
-					<h3>Church Address</h3>
-					<h4>Basilica of Saint Adalbert</h4>
-					<p>123 T. Globel Place.
-						<span>CG 09-123</span>
-						London, Ba. 4567
+					<h2>Hotels</h2>
+					<h3>JW Marriot</h3>
+					<h4>Downtown Grand Rapids</h4>
+					<p>235 Louis St NW
+						<span>Grand Rapids, MI 49503</span>
 					</p>
-					<h4>Get In Touch</h4>
-					<p>E-mail: <a href="mailto:info@example.com">mail@example.com</a>
+					<p>Phone: <b>877.901.6632</b></p>
+					<h4><a href="https://book.passkey.com/e/49957728">Book Room</a></h4>
+					<br>
+					<h3>Courtyard Marriot</h3>
+					<h4>Downtown Grand Rapids</h4>
+					<p>11 Monroe Ave NW
+						<span>Grand Rapids, MI 49503</span>
 					</p>
+					<p>Phone: <b>877.901.6632</b></p>
+					<h4><a href="https://book.passkey.com/e/49957728">Book Room</a></h4>
 				</div>
 				<div class="col-md-6 contact-form">
-					<form action="#" method="post">
+					<H2>Questions for Nathan & Lauren</H2>
+					<form action="mailto:lindenbaumWedding@gmail.com" method="post">
 						<input type="text" name="Name" placeholder="Name" required="">
 						<input type="email" name="Email" placeholder="Email" required="">
 						<input type="text" name="Subject" placeholder="Subject" required="">
