--- a/footer.html
+++ b/footer.html
@@ -38,30 +38,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="col-md-3 agileinfo_footer_grid">
             <div class="agileits_w3layouts_footer_logo">
                 <h5><a href="index.html">The Lindenbaum's</a></h5>
-                <div class="agileinfo-social-grids">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                        <li><a href="#"><i class="fa fa-vk"></i></a></li>
-                    </ul>
-                </div>
             </div>
         </div>
         <div class="col-md-3 agileinfo_footer_grid">
         </div>
         <div class="col-md-4 agileinfo_footer_grid">
             <h3>Contact Info</h3>
-            <h4>Email Us <span>lindyWedding@gmail.com</span></h4>
+            <h4>Email Us <span>lindenbaumWedding@gmail.com</span></h4>
             <p>Grand Rapids, MI</p>
         </div>
         <div class="col-md-2 agileinfo_footer_grid agileinfo_footer_grid1">
             <h3>Navigation</h3>
             <ul class="w3layouts_footer_nav">
                 <li><a href="about.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Our Story</a></li>
-                <li><a href="groomsmen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Groomsmen</a></li>
-                <li><a href="bridesmaids.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Bridesmaids</a></li>
-                <li><a href="contact.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Contact</a></li>
+                <li><a href="weddingParty.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Wedding Party</a></li>
+                <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Food</a></li>
+                <li><a href="contact.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Details</a></li>
             </ul>
         </div>
         <div class="clearfix"> </div>
