--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="agile_events_grid_pos agile_events_grid_pos1">
 						<h5><span>10:00am</span> 5/31/2020</h5>
 						<h4><a href="https://www.venue3two.com">Brunch</a></h4>
-						<p>Venue3Two | 3220 32nd St SE, Kentwood, MI 49512, USA.</p>
+						<p>JW Marriot | 235 Louis St NW, Grand Rapids, MI 49503, USA.</p>
 					</div>
 					<div class="agileits_w3layouts_events_grid_social">
 						<ul class="agileinfo_social_icons">
