--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 			<div class="mail-grids">
 				<div class="col-md-6 mail-grid-left">
-					<h2>Hotels</h2>
+					<h2>Blocked Hotel Rooms</h2>
 					<h3>JW Marriot</h3>
 					<h4>Downtown Grand Rapids</h4>
 					<p>235 Louis St NW
