--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="w3agile_footer_grids">
         <div class="col-md-3 agileinfo_footer_grid">
             <div class="agileits_w3layouts_footer_logo">
-                <h5><a href="index.html">The Lindenbaum's</a></h5>
+                <h5><a href="index.html">Lindenbaum Smith Wedding</a></h5>
             </div>
         </div>
         <div class="col-md-3 agileinfo_footer_grid">
